@@ -1,6 +1,11 @@
 .TH "History For AdvanceSCAN" 1
 .SH NAME
 advscan \(hy History For AdvanceSCAN
+.SH ADVANCESCAN VERSION 1.17 2012/11 
+.PD 0
+.IP \(bu
+In the report output (\(hy\(hyreport) don\(cqt complain about preliminary BIOS.
+.PD
 .SH ADVANCESCAN VERSION 1.16 2012/11 
 .PD 0
 .IP \(bu
