@@ -5,6 +5,14 @@
 <body>
 <center><h2>History For AdvanceSCAN</h2></center>
 <h2> 
+AdvanceSCAN Version 1.17 2012/11
+</h2>
+<ul>
+<li>
+In the report output (--report) don't complain about preliminary BIOS.
+</li>
+</ul>
+<h2> 
 AdvanceSCAN Version 1.16 2012/11
 </h2>
 <ul>
